// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SelectInput default 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    Default
  </label>
   
  <select
    class="select-input__control input__control"
    label="Default"
    options="[object Object],[object Object],[object Object]"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
    <option
      value="3"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`Storyshots SelectInput disabled 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    Disabled
  </label>
   
  <select
    class="select-input__control input__control"
    disabled="disabled"
    label="Disabled"
    options="[object Object],[object Object],[object Object]"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
    <option
      value="3"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`Storyshots SelectInput with blur handler 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    With Blur Handler
  </label>
   
  <select
    class="select-input__control input__control"
    label="With Blur Handler"
    options="[object Object],[object Object],[object Object]"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
    <option
      value="3"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`Storyshots SelectInput with change handler 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    With Change Handler
  </label>
   
  <select
    class="select-input__control input__control"
    label="With Change Handler"
    options="[object Object],[object Object],[object Object]"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
    <option
      value="3"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`Storyshots SelectInput with emoji options 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    Default
  </label>
   
  <select
    class="select-input__control input__control"
    label="Default"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <option
      value="zebra"
    >
      Zebra 🦓
    </option>
    <option
      value="t_rex"
    >
      T.Rex 🦖
    </option>
    <option
      value="gorilla"
    >
      Gorilla 🦍
    </option>
    <option
      value="fox"
    >
      Fox 🦊
    </option>
  </select>
</div>
`;

exports[`Storyshots SelectInput with focus handler 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    With Focus Handler
  </label>
   
  <select
    class="select-input__control input__control"
    label="With Focus Handler"
    options="[object Object],[object Object],[object Object]"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
    <option
      value="3"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`Storyshots SelectInput with input handler 1`] = `
<div
  class="select-input input"
>
  <label
    class="select-input__label input__label"
  >
    With Input Handler
  </label>
   
  <select
    class="select-input__control input__control"
    label="With Input Handler"
    options="[object Object],[object Object],[object Object]"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
    <option
      value="3"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`Storyshots TextInput default 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    Default
  </label>
   
  <input
    class="text-input__control input__control"
    label="Default"
  />
</div>
`;

exports[`Storyshots TextInput disabled 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    Disabled
  </label>
   
  <input
    class="text-input__control input__control"
    disabled="disabled"
    label="Disabled"
  />
</div>
`;

exports[`Storyshots TextInput readonly 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    Readonly
  </label>
   
  <input
    class="text-input__control input__control"
    label="Readonly"
    readonly="readonly"
  />
</div>
`;

exports[`Storyshots TextInput with blur handler 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    With Blur Handler
  </label>
   
  <input
    class="text-input__control input__control"
    label="With Blur Handler"
  />
</div>
`;

exports[`Storyshots TextInput with change handler 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    With Change Handler
  </label>
   
  <input
    class="text-input__control input__control"
    label="With Change Handler"
  />
</div>
`;

exports[`Storyshots TextInput with focus handler 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    With Focus Handler
  </label>
   
  <input
    class="text-input__control input__control"
    label="With Focus Handler"
  />
</div>
`;

exports[`Storyshots TextInput with input handler 1`] = `
<div
  class="text-input input"
>
  <label
    class="text-input__label input__label"
  >
    With Input Handler
  </label>
   
  <input
    class="text-input__control input__control"
    label="With Input Handler"
  />
</div>
`;
